--- a/multitimer/bower.json
+++ b/multitimer/bower.json
@@ -18,6 +18,7 @@
     "angular": "1.3.0-beta.15",
     "underscore": "~1.6.0",
     "bootstrap": "~3.2.0",
-    "numeral": "~1.5.3"
+    "numeral": "~1.5.3",
+    "angular-ui": "~0.4.0"
   }
 }
