--- a/about/assemble/package.json
+++ b/about/assemble/package.json
@@ -7,6 +7,7 @@
     "assemble": "^0.24.3",
     "grunt": "~0.4.1",
     "grunt-assemble": "^0.6.3",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-watch": "~0.5.3"
   }
 }
