--- a/about/assemble/package.json
+++ b/about/assemble/package.json
@@ -5,9 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "assemble": "^0.24.3",
+    "eslint": "^7.26.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "grunt": "~0.4.1",
     "grunt-assemble": "^0.6.3",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-watch": "~0.5.3"
-  }
+  },
+  "dependencies": {}
 }
